Update fixing desgin view issues

--- a/Web/index.html
+++ b/Web/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css">
 
   <link rel="stylesheet" href="assets/css/app.css">
+  <link rel="stylesheet" href="assets/css/bootstrap-overrides.css">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
 
   <div ng-view></div>
 
-  <div>Logo designer app: v<span app-version></span></div>
+  <!--<div>Logo designer app: v<span app-version></span></div>-->
   
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
