Flat menu button display + Redirect to app store for mobile versions

--- a/Web/index.html
+++ b/Web/index.html
@@ -45,13 +45,14 @@
   <script src="bower_components/seiyria-bootstrap-slider/dist/bootstrap-slider.min.js"></script>
   <script src="bower_components/slick-carousel/slick/slick.min.js"></script>
 
-
   <script src="assets/js/utils.js"></script>
   
   <script src="app/app.js"></script>
   <script src="app/components/designer/designerService.js"></script>
   <script src="app/components/designer/designerController.js"></script>
   <script src="app/components/designer/canvas.js"></script>
+
+  <script src="app/components/mobile/mobileController.js"></script>
 
   <script src="app/components/version/version.js"></script>
   <script src="app/components/version/version-directive.js"></script>
