--- a/Web/index.html
+++ b/Web/index.html
@@ -17,6 +17,10 @@
 
   <link rel="stylesheet" href="assets/css/app.css">
   <link rel="stylesheet" href="assets/css/bootstrap-overrides.css">
+
+  <style type="text/css">
+  
+  </style>
 </head>
 
 <body>
@@ -25,8 +29,6 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <ng-include src="'app/components/shared/header/headerView.html'" ></ng-include>
-
   <div ng-view></div>
 
   <!--<div>Logo designer app: v<span app-version></span></div>-->
@@ -34,6 +36,7 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
