Centering button and fixing preview padding

--- a/Web/index.html
+++ b/Web/index.html
@@ -47,6 +47,7 @@
   <script src="bower_components/spectrum/spectrum.js"></script>
   <script src="bower_components/seiyria-bootstrap-slider/dist/bootstrap-slider.min.js"></script>
   <script src="bower_components/slick-carousel/slick/slick.min.js"></script>
+  <script src="bundle.js"></script>
 
   <script src="assets/js/utils.js"></script>
   
